--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1164,6 +1164,19 @@ level 2 additionally outputs the function name.
 </varlistentry>
 
 <varlistentry>
+<term><token>log_auth_verbose</token> <parameter>validity</parameter></term>
+<listitem>
+<para>
+When "enable" is specified, verbose messages about authentication are logged.
+</para>
+<para>Example:</para>
+<literallayout>
+	log_auth_verbose enable
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><token>no_file_system_node_timeout</token> <parameter>seconds</parameter></term>
 <listitem>
 <para>If there is no file system node available,
@@ -1320,6 +1333,10 @@ it run as slave gfmd forcedly.
 The default is "disable".
 </para>
 <para>
+NOTE: Please do not use this feature for now,
+because this implementation is not complete.
+</para>
+<para>
 This parameter is only available in gfmd.conf.
 </para>
 <para>Example:</para>
@@ -1438,6 +1455,7 @@ notation.</para>
 		&nbsp;&nbsp;&lt;attr_cache_timeout_statement&gt; |
 		&nbsp;&nbsp;&lt;log_level_statement&gt; |
 		&nbsp;&nbsp;&lt;log_message_verbose_level_statement&gt; |
+		&nbsp;&nbsp;&lt;log_auth_verbose_statement&gt; |
 <!--		&nbsp;&nbsp;&lt;record_atime_statement&gt; | -->
 		&nbsp;&nbsp;&lt;client_file_bufsize_statement&gt; |
 		&nbsp;&nbsp;&lt;profile_statement&gt; |
@@ -1530,6 +1548,7 @@ notation.</para>
 	&lt;attr_cache_timeout_statement&gt; ::= "attr_cache_timeout" &lt;number&gt;
 	&lt;log_level_statement&gt; ::= "log_level" &lt;log_priority&gt;
 	&lt;log_message_verbose_level_statement&gt; ::= "log_message_verbose_level" &lt;number&gt;
+	&lt;log_auth_verbose_statement&gt; ::= "log_auth_verbose" &lt;validity&gt;
 	&lt;no_file_system_node_timeout_statement&gt; ::= "no_file_system_node_timeout" &lt;number&gt;
 	&lt;gfmd_reconnection_timeout_statement&gt; ::= "gfmd_reconnection_timeout" &lt;number&gt;
 <!--	&lt;record_atime_statement&gt; ::= "record_atime" &lt;validity&gt; -->
@@ -1578,12 +1597,22 @@ notation.</para>
 
 <refsect1 id='examples'><title>EXAMPLES</title>
 <para>
-The following is an example usin PostgreSQL to store the metadata,
+The following is an example of gfarm2.conf to use sharedsecret authentication.
+</para>
+<literallayout>
+metadb_server_host metadb.example.org
+metadb_server_port 601
+auth enable sharedsecret *
+sockopt keepalive
+</literallayout>
+
+<para>
+The following is an example of gfmd.conf
+to use PostgreSQL to store the metadata,
 and to allow access from filesystem nodes and clients at IP address
 192.168.0.0/24, via sharedsecret authentication.
 </para>
 <literallayout>
-spool /var/spool/gfarm
 metadb_server_host metadb.example.org
 metadb_server_port 601
 postgresql_server_host metadb.example.org
@@ -1592,16 +1621,16 @@ postgresql_dbname gfarm
 postgresql_user gfarm
 postgresql_password "secret-postgresql-password"
 auth enable sharedsecret 192.168.0.0/24
+admin_user john
 sockopt keepalive
 </literallayout>
 
 <para>
-The following is an example using LDAP to store the metadata,
+The following is an example of gfmd.conf to use LDAP to store the metadata,
 and to allow access from filesystem nodes and clients at any IP address,
 via GSI authentication.
 </para>
 <literallayout>
-spool /var/spool/gfarm
 metadb_server_host metadb.example.com
 metadb_server_port 601
 ldap_server_host metadb.example.com
@@ -1610,6 +1639,10 @@ ldap_base_dn "dc=example, dc=com"
 ldap_bind_dn "cn=gfarmuser, dc=example, dc=com"
 ldap_bind_password "secret-ldap-password"
 auth enable gsi *
+spool_server_cred_type host
+spool_server_cred_service gfsd
+admin_user john
+admin_user_gsi_dn "/C=JP/ST=Tokyo/L=Chuo-ku/O=Example, Inc./OU=Example Division/CN=John Doe"
 sockopt keepalive
 </literallayout>
 
