--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -766,6 +766,15 @@ gfarmライブラリが属性をキャッシュしている時間を、ミリ秒単位で指定します。
 	log_message_verbose_level 1
 .fi
 .TP
+\fBlog_auth_verbose \fI有効性\fB\fR
+enableと指定した場合、認証処理に関する詳細なログを記録します。
+
+例:
+
+.nf
+	log_auth_verbose enable
+.fi
+.TP
 \fBno_file_system_node_timeout \fI秒数\fB\fR
 利用可能なファイルシステムノードが存在しない場合，
 Gfarmクライアントライブラリはファイルシステムノードが利用可能になるまで試行を繰り返しますが、
@@ -866,6 +875,8 @@ Gfarmクライアントライブラリ（libgfarm）で使われるファイルのバッファ
 enable のとき、デフォルトのマスターgfmdとして設定されている場合でも、スレーブgfmdとして起動します。
 デフォルトはdisableです。
 
+注意: この機能の実装は不完全ですので、今のところ、利用しないでください。
+
 この文はgfmd.confのみで有効です。
 
 例:
@@ -961,6 +972,7 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 		\~\~<attr_cache_timeout_statement> |
 		\~\~<log_level_statement> |
 		\~\~<log_message_verbose_level_statement> |
+		\~\~<log_auth_verbose_statement> |
 		\~\~<client_file_bufsize_statement> |
 		\~\~<profile_statement> |
 		\~\~<metadb_server_list_statement> |
@@ -1039,10 +1051,11 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 	<attr_cache_timeout_statement> ::= "attr_cache_timeout" <number>
 	<log_level_statement> ::= "log_level" <log_priority>
 	<log_message_verbose_level_statement> ::= "log_message_verbose_level" <number>
+	<log_auth_verbose_statement> ::= "log_auth_verbose" <validity>
 	<no_file_system_node_timeout_statement> ::= "no_file_system_node_timeout" <number>
 	<gfmd_reconnection_timeout_statement> ::= "gfmd_reconnection_timeout" <number>
 	<client_file_bufsize_statement> ::= "client_file_bufsize" <size>
-	<profile_tatement> ::= "profile" <validity>
+	<profile_statement> ::= "profile" <validity>
 	<metadb_server_list_statement> ::= "metadb_server_list" <metadb_server_list_spec>
 	<metadb_server_list_spec> ::=
 		\~\~<hostname_port_spec> |
@@ -1077,12 +1090,20 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 .fi
 .SH "EXAMPLES"
 .PP
-メタデータの保存にPostgreSQLを使い、IPアドレス192.168.0.0/24の
-ファイルシステムノードやクライアントに対して、sharedsecret認証を
-使う例です。
+以下は sharedsecret認証を使う gfarm2.conf の例です。
 
 .nf
-spool /var/spool/gfarm
+metadb_server_host metadb.example.org
+metadb_server_port 601
+auth enable sharedsecret *
+sockopt keepalive
+.fi
+.PP
+メタデータの保存にPostgreSQLを使い、IPアドレス192.168.0.0/24の
+ファイルシステムノードやクライアントに対して、sharedsecret認証を
+使う gfmd.conf の例です。
+
+.nf
 metadb_server_host metadb.example.org
 metadb_server_port 601
 postgresql_server_host metadb.example.org
@@ -1091,14 +1112,15 @@ postgresql_dbname gfarm
 postgresql_user gfarm
 postgresql_password "secret-postgresql-password"
 auth enable sharedsecret 192.168.0.0/24
+admin_user john
 sockopt keepalive
 .fi
 .PP
 メタデータの保存にLDAPを使い、任意のIPアドレスを使う
-ファイルシステムノードやクライアントに対して、GSI認証を使う例です。
+ファイルシステムノードやクライアントに対して、GSI認証を使う
+gfmd.conf の例です。
 
 .nf
-spool /var/spool/gfarm
 metadb_server_host metadb.example.com
 metadb_server_port 601
 ldap_server_host metadb.example.com
@@ -1107,6 +1129,10 @@ ldap_base_dn "dc=example, dc=com"
 ldap_bind_dn "cn=gfarmuser, dc=example, dc=com"
 ldap_bind_password "secret-ldap-password"
 auth enable gsi *
+spool_server_cred_type host
+spool_server_cred_service gfsd
+admin_user john
+admin_user_gsi_dn "/C=JP/ST=Tokyo/L=Chuo-ku/O=Example, Inc./OU=Example Division/CN=John Doe"
 sockopt keepalive
 .fi
 .SH "FILES"
