--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
@@ -1284,6 +1284,7 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 </listitem>
 </varlistentry>
 
+<!--
 <varlistentry>
 <term><token>metadb_server_force_slave</token> <parameter>有効性</parameter></term>
 <listitem>
@@ -1302,6 +1303,7 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 </literallayout>
 </listitem>
 </varlistentry>
+ -->
 
 <varlistentry>
 <term><token>metadb_server_slave_max_size</token> <parameter>ノード数</parameter></term>
@@ -1418,7 +1420,7 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 		&nbsp;&nbsp;&lt;metadb_replication_statement&gt; |
 		&nbsp;&nbsp;&lt;synchronous_replication_timeout_statement&gt; |
 		&nbsp;&nbsp;&lt;synchronous_journaling_statement&gt; |
-		&nbsp;&nbsp;&lt;metadb_server_force_slave_statement&gt; |
+<!--		&nbsp;&nbsp;&lt;metadb_server_force_slave_statement&gt; | -->
 		&nbsp;&nbsp;&lt;metadb_server_slave_max_size_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_journal_dir_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_journal_max_size_statement&gt;
@@ -1516,7 +1518,7 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 	&lt;metadb_replication_statement&gt; ::= "metadb_replication" &lt;validity&gt;
 	&lt;synchronous_replication_timeout_statement&gt; ::= "synchronous_replication_timeout" &lt;number&gt;
 	&lt;synchronous_journaling_statement&gt; ::= "synchronous_journaling" &lt;validity&gt;
-	&lt;metadb_server_force_slave_statement&gt; ::= "metadb_server_force_slave" &lt;validity&gt;
+<!--	&lt;metadb_server_force_slave_statement&gt; ::= "metadb_server_force_slave" &lt;validity&gt; -->
 	&lt;metadb_server_slave_max_size_statement&gt; ::= "metadb_server_slave_max_size" &lt;number&gt;
 	&lt;metadb_journal_dir_statement&gt; ::= "metadb_journal_dir" &lt;pathname&gt;
 	&lt;metadb_journal_max_size_statement&gt; ::= "metadb_journal_max_size" &lt;number&gt;
