describe -l option which was added in r5040

--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfstat.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfstat.1.docbook
@@ -43,6 +43,13 @@
 </varlistentry>
 
 <varlistentry>
+<term><option>-l</option></term>
+<listitem>
+<para>シンボリックリンクを辿らず．リンク自身の情報を表示します．</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><option>-?</option></term>
 <listitem>
 <para>引数オプションを表示します．</para>
