--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfstat.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfstat.1.docbook
@@ -44,6 +44,13 @@ specified files or directories in the Gfarm filesystem.</para>
 </varlistentry>
 
 <varlistentry>
+<term><option>-l</option></term>
+<listitem>
+<para>does not follow symbolic links, but show the link information itself.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><option>-?</option></term>
 <listitem>
 <para>displays a list of command options.</para>
