--- a/gfarm_v2/trunk/man/ja/man1/gfstat.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfstat.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSTAT" "1" "04 January 2010" "Gfarm" ""
+.TH "GFSTAT" "1" "09 September 2011" "Gfarm" ""
 
 .SH NAME
 gfstat \- Gfarm ファイルまたはディレクトリの情報を表示する
@@ -18,6 +18,9 @@ gfstat \- Gfarm ファイルまたはディレクトリの情報を表示する
 .TP
 \fB-c\fR
 ファイル複製の数を表示します．
+.TP
+\fB-l\fR
+シンボリックリンクを辿らず．リンク自身の情報を表示します．
 .TP
 \fB-?\fR
 引数オプションを表示します．
