--- a/gfarm_v2/trunk/man/man1/gfstat.1
+++ b/gfarm_v2/trunk/man/man1/gfstat.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSTAT" "1" "04 January 2010" "Gfarm" ""
+.TH "GFSTAT" "1" "09 September 2011" "Gfarm" ""
 
 .SH NAME
 gfstat \- display file or directory status
@@ -19,6 +19,9 @@ specified files or directories in the Gfarm filesystem.
 .TP
 \fB-c\fR
 displays only the number of file replicas.
+.TP
+\fB-l\fR
+does not follow symbolic links, but show the link information itself.
 .TP
 \fB-?\fR
 displays a list of command options.
