--- a/gfarm_v2/trunk/man/ja/man1/gfstat.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfstat.1
@@ -16,8 +16,11 @@ gfstat \- Gfarm ファイルまたはディレクトリの情報を表示する
 指定したファイルあるいはディレクトリの情報を表示します．
 .SH "OPTIONS"
 .TP
+\fB-M\fR
+メタデータ・サーバの情報も表示します．
+.TP
 \fB-c\fR
-ファイル複製の数を表示します．
+ファイル複製の数のみを表示します．
 .TP
 \fB-l\fR
 シンボリックリンクを辿らず．リンク自身の情報を表示します．
