--- a/gfarm_v2/trunk/man/man1/gfstat.1
+++ b/gfarm_v2/trunk/man/man1/gfstat.1
@@ -17,6 +17,9 @@ gfstat \- display file or directory status
 specified files or directories in the Gfarm filesystem.
 .SH "OPTIONS"
 .TP
+\fB-M\fR
+displays metadata server information as well.
+.TP
 \fB-c\fR
 displays only the number of file replicas.
 .TP
