--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfmdhost.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfmdhost.1.docbook
@@ -90,8 +90,17 @@ gfarm のメタデータサーバの冗長化機能に関連する情報の表示や管理を行います。
       </para>
       <para><option>接続状態 (+|-)</option></para>
       <para>
-        "+" はマスター gfmd と接続していることを表します。
+        "+" はマスター gfmd と正常に接続していることを表します。
         "-" は接続していないことを表します。
+	"?" は、マスター gfmd と接続直後でまだ状態が判明してないか、あるいは
+	Gfarm-2.5.0 の gfmd に対して、Gfarm-2.5.1 以降の gfmdhost コマンド
+	から接続した場合に表示されます。
+	"x" はマスター gfmd と接続できたものの、切断している間の更新量が
+        多く自動同期が不可能となり、バックエンド・データベースのダンプ・
+	リストアを用いて同期をとる必要が生じていることを表します。
+	"e" は何らかのエラーが生じ、ログの調査が必要なことを表します。
+	"x" および "e" については、そのスレーブgfmdが停止した後でも、
+	表示が続きます。
         マスター gfmd は常に "+" です。
       </para>
       <para><option>サーバ種別 (master|slave)</option></para>
