--- a/gfarm_v2/trunk/man/man1/gfmdhost.1
+++ b/gfarm_v2/trunk/man/man1/gfmdhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMDHOST" "1" "31 July 2011" "Gfarm" ""
+.TH "GFMDHOST" "1" "10 September 2011" "Gfarm" ""
 
 .SH NAME
 gfmdhost \- Gfarm metadata server host maintenance command
@@ -50,6 +50,16 @@ The detailed information is displayed in the following order.
 "+" means that the gfmd is connected to the master gfmd.
 "-" means that the gfmd is not connected to the master gfmd.
 This column for the master gfmd is always "+".
+"?" means either the gfmd state is unknown because it's just
+after the connection was established, or the master gfmd is
+Gfarm-2.5.0, but this gfmdhost command is 2.5.1 or later.
+"x" means that the connection with master gfmd was established,
+but automatic synchronization was impossible because of too many
+metadata changes, thus, manual synchronization via dump and
+restore of the backend database is necessary.
+"e" means an error happened, and log file must be checked manually.
+Both "x" and "e" are displayed even after the slave gfmd is down.
+Master gfmd is always marked as "+".
 
 \fBServer Type (master|slave)\fR
 
