--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfarm2.conf.5'>
 
-<refentryinfo><date>12 Apr 2010</date></refentryinfo>
+<refentryinfo><date>10 Sep 2011</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm2.conf</refentrytitle>
@@ -1396,6 +1396,26 @@ This parameter is only available in gfmd.conf.
 </listitem>
 </varlistentry>
 
+<varlistentry>
+<term><token>metadb_journal_recvq_size</token> <parameter>size</parameter></term>
+<listitem>
+<para>This parameter specifies the maximum number of on-memory records of
+the journal data that the slave gfmd receives from the master gfmd.
+If it reaches this value, the slave gfmd gives up and exits,
+because the gfmd thinks that it's too slow to apply the journal data
+to the backend database.
+The default value is 100000.
+</para>
+<para>
+This parameter is only available in gfmd.conf.
+</para>
+<para>Example:</para>
+<literallayout>
+	metadb_journal_recvq_size 100000
+</literallayout>
+</listitem>
+</varlistentry>
+
 </variablelist>
 </refsect1>
 
@@ -1466,7 +1486,8 @@ notation.</para>
 		&nbsp;&nbsp;&lt;metadb_server_force_slave_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_server_slave_max_size_statement&gt; |
 		&nbsp;&nbsp;&lt;metadb_journal_dir_statement&gt; |
-		&nbsp;&nbsp;&lt;metadb_journal_max_size_statement&gt;
+		&nbsp;&nbsp;&lt;metadb_journal_max_size_statement&gt; |
+		&nbsp;&nbsp;&lt;metadb_journal_recvq_size_statement&gt;
 	&lt;spool_statement&gt; ::= "spool" &lt;pathname&gt;
 	&lt;spool_server_listen_address_statement&gt; ::=
 		&nbsp;&nbsp;"spool_server_listen_address" &lt;ipv4_address&gt;
@@ -1565,6 +1586,7 @@ notation.</para>
 	&lt;metadb_server_slave_max_size_statement&gt; ::= "metadb_server_slave_max_size" &lt;number&gt;
 	&lt;metadb_journal_dir_statement&gt; ::= "metadb_journal_dir" &lt;pathname&gt;
 	&lt;metadb_journal_max_size_statement&gt; ::= "metadb_journal_max_size" &lt;number&gt;
+	&lt;metadb_journal_recvq_size_statement&gt; ::= "metadb_journal_recvq_size" &lt;number&gt;
 	&lt;hostspec&gt; ::= &lt;ipv4_address&gt; | &lt;ipv4_address&gt; "/" &lt;address_mask&gt; |
 		&nbsp;&nbsp;&lt;hostname&gt; | "." &lt;domain_name&gt; | "*"
 	&lt;pathname&gt; ::= &lt;pathname_character&gt; &lt;pathname_character&gt;*
