--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "30 August 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "10 September 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm設定ファイル
@@ -921,6 +921,21 @@ enable のとき、デフォルトのマスターgfmdとして設定されている場合でも、スレーブgfm
 .nf
 	metadb_journal_max_size 8388608
 .fi
+.TP
+\fBmetadb_journal_recvq_size \fIキュー長\fB\fR
+スレーブgfmdが、マスターgfmdから受け取るジャーナルデータに関して、
+メモリ上に保持する最大レコード数を指定します。
+このサイズを越えて保持する必要が生じた場合には、バックエンド・データベース
+への反映に遅延が生じていると見なし、スレーブとしての動作を諦めて終了します。
+デフォルトは100000です。
+
+この文はgfmd.confのみで有効です。
+
+例:
+
+.nf
+	metadb_journal_recvq_size 100000
+.fi
 .SH "GRAMMAR"
 .PP
 gfarm2.confの文法をBNFで記述すると、下記のようになります。
@@ -982,7 +997,8 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 		\~\~<metadb_server_force_slave_statement> |
 		\~\~<metadb_server_slave_max_size_statement> |
 		\~\~<metadb_journal_dir_statement> |
-		\~\~<metadb_journal_max_size_statement>
+		\~\~<metadb_journal_max_size_statement> |
+		\~\~<metadb_journal_recvq_size_statement> |
 	<spool_statement> ::= "spool" <pathname>
 	<spool_server_listen_address_statement> ::=
 		\~\~"spool_server_listen_address" <ipv4_address>
@@ -1067,6 +1083,7 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 	<metadb_server_slave_max_size_statement> ::= "metadb_server_slave_max_size" <number>
 	<metadb_journal_dir_statement> ::= "metadb_journal_dir" <pathname>
 	<metadb_journal_max_size_statement> ::= "metadb_journal_max_size" <number>
+	<metadb_journal_recvq_size_statement> ::= "metadb_journal_recvq_size" <number>
 	<hostspec> ::= <ipv4_address> | <ipv4_address> "/" <address_mask> |
 		\~\~<hostname> | "." <domain_name> | "*"
 	<pathname> ::= <pathname_character> <pathname_character>*
