--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfmdhost.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man1/gfmdhost.1.docbook
@@ -88,7 +88,7 @@ gfarm のメタデータサーバの冗長化機能に関連する情報の表示や管理を行います。
       <para>
         詳細情報は次の順に表示されます。
       </para>
-      <para><option>接続状態 (+|-)</option></para>
+      <para><option>接続状態 (+|-|?|x|e)</option></para>
       <para>
         "+" はマスター gfmd と正常に接続していることを表します。
         "-" は接続していないことを表します。
