--- a/gfarm_v2/trunk/man/ja/man1/gfstatus.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfstatus.1
@@ -3,14 +3,24 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSTATUS" "1" "19 12月 2008" "Gfarm" ""
+.TH "GFSTATUS" "1" "04 January 2012" "Gfarm" ""
 
 .SH NAME
 gfstatus \- Gfarmファイルシステムの情報を表示する
 .SH SYNOPSIS
 
-\fBgfstatus\fR
+\fBgfstatus\fR [ \fB\fIオプション\fB\fR ]
 
 .SH "DESCRIPTION"
 .PP
 Gfarmファイルシステムの情報を表示します．
+.SH "OPTIONS"
+.TP
+\fB-d\fR
+デバッグメッセージを表示します．
+.TP
+\fB-P \fIパス名\fB\fR
+指定したパス名により特定のメタデータサーバを指定します．
+.TP
+\fB-?\fR
+引数オプションを表示します。
