--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
@@ -1158,6 +1158,43 @@ enableと指定した場合、ファイル作成・変更・削除に関する
 </varlistentry>
 
 <varlistentry>
+<term><token>debug_command</token> <parameter>string_list</parameter></term>
+<listitem>
+<para>
+Gfarmのアプリケーションプログラムがクラッシュした際 (SIGSEGV, SIGBUGを
+受け取る等した場合)、このパラメータに記したデバッグコマンドが実行されます。
+記述例を示します。
+</para>
+<literallayout>
+	debug_command env DISPLAY=:0.0 xterm -e gdb %e %p
+</literallayout>
+<para>
+ここで、"%e", "%p" は実際のプログラム名、プロセスIDにそれぞれ展開されます。
+"%" 文字自体をコマンドライン中に記述したい場合は、"%%" と書いて下さい。
+</para>
+<para>
+このパラメータは、gfarm2.confとgfmd.confの両方で有効です。
+このパラメータを指定しなかった場合、デバッグコマンドは実行されません。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>debug_command</token> <parameter>string_list</parameter></term>
+<listitem>
+<para>
+</para>
+<para>
+このパラメータは、gfarm2.confとgfmd.confの両方で有効です。
+</para>
+<para>For example,</para>
+<literallayout>
+	debug_command env DISPLAY=:0.0 xterm -e gdb
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><token>no_file_system_node_timeout</token> <parameter>秒数</parameter></term>
 <listitem>
 <para>利用可能なファイルシステムノードが存在しない場合，
@@ -1448,6 +1485,7 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 		&nbsp;&nbsp;&lt;log_message_verbose_level_statement&gt; |
 		&nbsp;&nbsp;&lt;log_auth_verbose_statement&gt; |
 		&nbsp;&nbsp;&lt;file_trace_statement&gt; |
+		&nbsp;&nbsp;&lt;debug_command_statement&gt; |
 <!--		&nbsp;&nbsp;&lt;record_atime_statement&gt; | -->
 		&nbsp;&nbsp;&lt;client_file_bufsize_statement&gt; |
 		&nbsp;&nbsp;&lt;profile_statement&gt; |
@@ -1543,6 +1581,7 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 	&lt;log_message_verbose_level_statement&gt; ::= "log_message_verbose_level" &lt;number&gt;
 	&lt;log_auth_verbose_statement&gt; ::= "log_auth_verbose" &lt;validity&gt;
 	&lt;file_trace_statement&gt; ::= "file_trace" &lt;validity&gt;
+	&lt;debug_command_statement&gt; ::= "debug_command" &lt;string_list&gt;
 	&lt;no_file_system_node_timeout_statement&gt; ::= "no_file_system_node_timeout" &lt;number&gt;
 	&lt;gfmd_reconnection_timeout_statement&gt; ::= "gfmd_reconnection_timeout" &lt;number&gt;
 <!--	&lt;record_atime_statement&gt; ::= "record_atime" &lt;validity&gt; -->
@@ -1560,6 +1599,9 @@ disable設定は、通常のファイルシステムにおける"noatime"オプションに
 	&lt;metadb_journal_dir_statement&gt; ::= "metadb_journal_dir" &lt;pathname&gt;
 	&lt;metadb_journal_max_size_statement&gt; ::= "metadb_journal_max_size" &lt;number&gt;
 	&lt;metadb_journal_recvq_size_statement&gt; ::= "metadb_journal_recvq_size" &lt;number&gt;
+	&lt;string_list&gt; ::= 
+		&nbsp;&nbsp;&lt;string&gt; |
+		&nbsp;&nbsp;&lt;string&gt; &lt;string_list&gt;
 	&lt;hostspec&gt; ::= &lt;ipv4_address&gt; | &lt;ipv4_address&gt; "/" &lt;address_mask&gt; |
 		&nbsp;&nbsp;&lt;hostname&gt; | "." &lt;domain_name&gt; | "*"
 	&lt;pathname&gt; ::= &lt;pathname_character&gt; &lt;pathname_character&gt;*
