--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "10 December 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "18 1æœˆ 2012" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- GfarmÀßÄê¥Õ¥¡¥¤¥ë
@@ -787,6 +787,31 @@ enable¤È»ØÄê¤·¤¿¾ì¹ç¡¢¥Õ¥¡¥¤¥ëºîÀ®¡¦ÊÑ¹¹¡¦ºï½ü¤Ë´Ø¤¹¤ë
 	file_trace enable
 .fi
 .TP
+\fBdebug_command \fIstring_list\fB\fR
+Gfarm¤Î¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¥×¥í¥°¥é¥à¤¬¥¯¥é¥Ã¥·¥å¤·¤¿ºÝ (SIGSEGV, SIGBUG¤ò
+¼õ¤±¼è¤ëÅù¤·¤¿¾ì¹ç)¡¢¤³¤Î¥Ñ¥é¥á¡¼¥¿¤Ëµ­¤·¤¿¥Ç¥Ð¥Ã¥°¥³¥Þ¥ó¥É¤¬¼Â¹Ô¤µ¤ì¤Þ¤¹¡£
+µ­½ÒÎã¤ò¼¨¤·¤Þ¤¹¡£
+
+.nf
+	debug_command env DISPLAY=:0.0 xterm -e gdb %e %p
+.fi
+
+¤³¤³¤Ç¡¢"%e", "%p" ¤Ï¼ÂºÝ¤Î¥×¥í¥°¥é¥àÌ¾¡¢¥×¥í¥»¥¹ID¤Ë¤½¤ì¤¾¤ìÅ¸³«¤µ¤ì¤Þ¤¹¡£
+"%" Ê¸»ú¼«ÂÎ¤ò¥³¥Þ¥ó¥É¥é¥¤¥óÃæ¤Ëµ­½Ò¤·¤¿¤¤¾ì¹ç¤Ï¡¢"%%" ¤È½ñ¤¤¤Æ²¼¤µ¤¤¡£
+
+¤³¤Î¥Ñ¥é¥á¡¼¥¿¤Ï¡¢gfarm2.conf¤Ègfmd.conf¤ÎÎ¾Êý¤ÇÍ­¸ú¤Ç¤¹¡£
+¤³¤Î¥Ñ¥é¥á¡¼¥¿¤ò»ØÄê¤·¤Ê¤«¤Ã¤¿¾ì¹ç¡¢¥Ç¥Ð¥Ã¥°¥³¥Þ¥ó¥É¤Ï¼Â¹Ô¤µ¤ì¤Þ¤»¤ó¡£
+.TP
+\fBdebug_command \fIstring_list\fB\fR
+
+¤³¤Î¥Ñ¥é¥á¡¼¥¿¤Ï¡¢gfarm2.conf¤Ègfmd.conf¤ÎÎ¾Êý¤ÇÍ­¸ú¤Ç¤¹¡£
+
+For example,
+
+.nf
+	debug_command env DISPLAY=:0.0 xterm -e gdb
+.fi
+.TP
 \fBno_file_system_node_timeout \fIÉÃ¿ô\fB\fR
 ÍøÍÑ²ÄÇ½¤Ê¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥Î¡¼¥É¤¬Â¸ºß¤·¤Ê¤¤¾ì¹ç¡¤
 Gfarm¥¯¥é¥¤¥¢¥ó¥È¥é¥¤¥Ö¥é¥ê¤Ï¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥Î¡¼¥É¤¬ÍøÍÑ²ÄÇ½¤Ë¤Ê¤ë¤Þ¤Ç»î¹Ô¤ò·«¤êÊÖ¤·¤Þ¤¹¤¬¡¢
@@ -1001,6 +1026,7 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 		\~\~<log_message_verbose_level_statement> |
 		\~\~<log_auth_verbose_statement> |
 		\~\~<file_trace_statement> |
+		\~\~<debug_command_statement> |
 		\~\~<client_file_bufsize_statement> |
 		\~\~<profile_statement> |
 		\~\~<metadb_server_list_statement> |
@@ -1082,6 +1108,7 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 	<log_message_verbose_level_statement> ::= "log_message_verbose_level" <number>
 	<log_auth_verbose_statement> ::= "log_auth_verbose" <validity>
 	<file_trace_statement> ::= "file_trace" <validity>
+	<debug_command_statement> ::= "debug_command" <string_list>
 	<no_file_system_node_timeout_statement> ::= "no_file_system_node_timeout" <number>
 	<gfmd_reconnection_timeout_statement> ::= "gfmd_reconnection_timeout" <number>
 	<client_file_bufsize_statement> ::= "client_file_bufsize" <size>
@@ -1098,6 +1125,9 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 	<metadb_journal_dir_statement> ::= "metadb_journal_dir" <pathname>
 	<metadb_journal_max_size_statement> ::= "metadb_journal_max_size" <number>
 	<metadb_journal_recvq_size_statement> ::= "metadb_journal_recvq_size" <number>
+	<string_list> ::= 
+		\~\~<string> |
+		\~\~<string> <string_list>
 	<hostspec> ::= <ipv4_address> | <ipv4_address> "/" <address_mask> |
 		\~\~<hostname> | "." <domain_name> | "*"
 	<pathname> ::= <pathname_character> <pathname_character>*
