Delete an overstruk paragraph. Rename an argument of 'debug_command' directive.

--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1194,7 +1194,7 @@ This directive is available in both gfarm2.conf and gfmd.conf.
 </varlistentry>
 
 <varlistentry>
-<term><token>debug_command</token> <parameter>string_list</parameter></term>
+<term><token>debug_command</token> <parameter>command_line</parameter></term>
 <listitem>
 <para>
 When a Gfarm application program crashes (received SIGSEGV, SIGBUG, etc.),
